<resources>
    <string name="app_name">Table de rappel</string>
    <string name="titre">Table de rappel</string>
    <string name="boutonReveler">Révéler</string>
    <string name="boutonSuivant">Suivant</string>
    <string name="enonce">99</string>
    <string name="boutonRetour">Retour</string>
    <string name="boutonQuizz">Quizz</string>
    <string name="boutonTable">Table</string>
    <string name="titreTable">Ici il y aura un jour la table (j éspère!).</string>
    <string name="boutonAccueil">Accueil</string>
    <string name="nom_image_table">Tintin</string>
    <string name="debut_image_table">T</string>
    <string name="fin_image_table">in</string>
    <string name="numeroImageTable">11</string>
    <string name="bouton_cest_quoi">C\'est quoi?</string>
    <string name="bouton_regles">Les règles</string>
</resources>