<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <ImageView
        android:id="@+id/imageTable"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:src="@drawable/img11" />

    <LinearLayout
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/numeroImageTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numeroImageTable"
            android:textColor="@color/design_default_color_primary"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/nomImageTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_image_table"
            android:textColor="@color/design_default_color_primary"
            android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/debut_image_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debut_image_table" />

        <TextView
            android:id="@+id/petits_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" ... " />

        <TextView
            android:id="@+id/fin_image_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fin_image_table" />
    </LinearLayout>
</LinearLayout>