<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/sur_principale"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="100dp"
        app:cardElevation="16dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="20dp">

        <android.widget.Button
            android:id="@+id/bouton_cest_quoi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cest_quoi3"
            android:elevation="160dp"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:text="@string/bouton_cest_quoi"
            android:textColor="@color/variante_principale"
            android:textSize="45dp"
            android:translationZ="160dp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="100dp"
        app:cardElevation="16dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="20dp">

        <android.widget.Button
            android:id="@+id/bouton_regles"
            android:text="@string/bouton_regles"
            android:paddingLeft="5dp"
            android:textSize="45dp"
            android:gravity="left"
            android:textColor="@color/variante_principale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="160dp"
            android:translationZ="160dp"
            android:background="@drawable/regles"/>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="100dp"
        app:cardElevation="16dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="20dp">

        <android.widget.Button
            android:id="@+id/boutonTable"
            android:text="@string/boutonTable"
            android:paddingLeft="5dp"
            android:textSize="45dp"
            android:gravity="left"
            android:textColor="@color/variante_principale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table"/>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="100dp"
        app:cardElevation="16dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="20dp">

        <android.widget.Button
            android:id="@+id/boutonQuizz"
            android:text="@string/boutonQuizz"
            android:paddingLeft="5dp"
            android:textSize="45dp"
            android:gravity="left"
            android:textColor="@color/variante_principale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="160dp"
            android:translationZ="160dp"
            android:background="@drawable/quizz2"/>


    </androidx.cardview.widget.CardView>






</LinearLayout>
